--- a/SalesAnalysis/Analysis.ipynb
+++ b/SalesAnalysis/Analysis.ipynb
@@ -797,6 +797,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Order ID</th>\n",
+       "      <th>Product</th>\n",
+       "      <th>Quantity Ordered</th>\n",
+       "      <th>Price Each</th>\n",
+       "      <th>Order Date</th>\n",
+       "      <th>Purchase Address</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>295665</td>\n",
+       "      <td>Macbook Pro Laptop</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1700.00</td>\n",
+       "      <td>12/30/19 00:01</td>\n",
+       "      <td>136 Church St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1700.00</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>NY 10001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>295666</td>\n",
+       "      <td>LG Washing Machine</td>\n",
+       "      <td>1</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>12/29/19 07:03</td>\n",
+       "      <td>562 2nd St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>600.00</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>NY 10001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>295667</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>12/12/19 18:21</td>\n",
+       "      <td>277 Main St, New York City, NY 10001</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>New York City</td>\n",
+       "      <td>NY 10001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>295668</td>\n",
+       "      <td>27in FHD Monitor</td>\n",
+       "      <td>1</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>12/22/19 15:13</td>\n",
+       "      <td>410 6th St, San Francisco, CA 94016</td>\n",
+       "      <td>12</td>\n",
+       "      <td>149.99</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA 94016</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>295669</td>\n",
+       "      <td>USB-C Charging Cable</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>12/18/19 12:38</td>\n",
+       "      <td>43 Hill St, Atlanta, GA 30301</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>Atlanta</td>\n",
+       "      <td>GA 30301</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Order ID               Product  Quantity Ordered  Price Each  \\\n",
+       "0   295665    Macbook Pro Laptop                 1     1700.00   \n",
+       "1   295666    LG Washing Machine                 1      600.00   \n",
+       "2   295667  USB-C Charging Cable                 1       11.95   \n",
+       "3   295668      27in FHD Monitor                 1      149.99   \n",
+       "4   295669  USB-C Charging Cable                 1       11.95   \n",
+       "\n",
+       "       Order Date                        Purchase Address  Month    Sales  \\\n",
+       "0  12/30/19 00:01  136 Church St, New York City, NY 10001     12  1700.00   \n",
+       "1  12/29/19 07:03     562 2nd St, New York City, NY 10001     12   600.00   \n",
+       "2  12/12/19 18:21    277 Main St, New York City, NY 10001     12    11.95   \n",
+       "3  12/22/19 15:13     410 6th St, San Francisco, CA 94016     12   149.99   \n",
+       "4  12/18/19 12:38           43 Hill St, Atlanta, GA 30301     12    11.95   \n",
+       "\n",
+       "            City      State  \n",
+       "0  New York City   NY 10001  \n",
+       "1  New York City   NY 10001  \n",
+       "2  New York City   NY 10001  \n",
+       "3  San Francisco   CA 94016  \n",
+       "4        Atlanta   GA 30301  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# This is one way to grab a specific bit of text from a column\n",
+    "all_data_df[\"State\"] = all_data_df['Purchase Address'].str.split(',').str[2]\n",
+    "all_data_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
